# rs-simple-url-shortener

./: .gitignore  Cargo.toml  README.md  nginx  rs-url-shortener.service
.sqlx/: query-51381d3a7ce0220d7653e56ff5cabfe206aeb749b8b27d690c932192bb110f57.json  query-6a30313f06cc0b1366555c0ca5a85ed36c9cbccd5b12b7b90eee1b8529e3cc83.json  query-b0f12a42ef2aa8b9510ada054a1d7b847217d4febaa7a8097d493dfddbabf251.json  query-db4f3d2dbf7b1a83e903d4692f6de9a6c77143a9edd20f4ca239cf461800fb10.json
migrations/: 20240224013130_create_urls_table.sql
src/: auth.rs  errors.rs  main.rs  models.rs  routes.rs
