[package]
name = "rs-url-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
env_logger = "0.11.2"
actix-web-httpauth = "0.8.1"
sqlx = { version = "0.7.3", features = ["sqlite", "macros"] }
